--- a/stylesheets/scss/layout/_containers.scss
+++ b/stylesheets/scss/layout/_containers.scss
@@ -48,8 +48,8 @@
 
 .hero-container {
 	height: 100vh;
-	width: 100vw;
-	padding: 0 10%;
+	width: 100%;
+	// padding: 0 10%;
 	background-size: cover;
 	left: 0;
 	position: relative;
